<resources>
    <string name="app_name">Dungeoneer Companion App</string>
    <string name="plus_one">+1</string>
    <string name="plus_five">+5</string>
    <string name="plus_ten">+10</string>
    <string name="minus_one">-1</string>
    <string name="minus_five">-5</string>
    <string name="minus_ten">-10</string>
    <string name="zero">00</string>
    <string name="level">Level</string>
</resources>