<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/tavern"
              android:baselineAligned="false"
              tools:context="com.example.ofirv.dungeoneercompanionapp.MainActivity">

    <LinearLayout
        android:layout_width="0sp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/glory_plus_ten"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="1"
            android:background="#55555555"
            android:text="@string/plus_ten" />

        <Button
            android:id="@+id/glory_plus_five"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="1"
            android:background="#55555555"
            android:text="@string/plus_five" />

        <Button
            android:id="@+id/glory_plus_one"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="1"
            android:background="#55555555"
            android:text="@string/plus_one" />
    </LinearLayout>
</LinearLayout>
